fix dark mode by importing app.css into app.js

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 }
 
 body.dark {
-  background-color: #121212;
+  background-color: #0f254d;
   color: white;
 }
 
